@@ -1,14 +1,8 @@
 DIST upkern-2.0.14.tar.bz2 9896 RMD160 9dc95fac0947346d81dc1243ac45af310b10faaa SHA1 4c4257ab9b02ac9a85cbd5810edc45baf556104b SHA256 8a6f216796b99779798ad68433b338dd35491844a088afa236cf20ae9364736d
-DIST upkern-3.1.2.tar.bz2 17055 RMD160 bca389ef745dbaeb157c6d5f0ba208cf2e5f3aaf SHA1 2efbd34186e892294842480aedaad7c80676f966 SHA256 e976630f6d7a786ce5480432b544282c9b92a46503806bd6286a6f9f4ff685d0
-DIST upkern-3.1.3.tar.bz2 18132 RMD160 79fca4514bfbbf1bad25e712410882b280c1ad65 SHA1 6fd3c47f88b722e5481406d9048196fb851c23b3 SHA256 636e61b89e43e5fbf87915fb56006a045dbdac2efb52533f2a55a083b776731c
-DIST upkern-3.1.4.tar.bz2 18175 RMD160 7dd4d980128392762b090f44de0eee9ec4291e11 SHA1 a6783997a99b04673ad799b632f54824fcddd3e4 SHA256 ef0f36e69cd8bab65f32936d05ecc80325ae6dcd9e177c6bf6702600def9723f
-DIST upkern-3.1.5.tar.bz2 18151 RMD160 a912354a90319851d1d5ab126e149d369ec26673 SHA1 83b143b41437d7881fab602f8e49cc87193f439b SHA256 2dc168cf814b3d0153e718e8c35ca74fd6eaa0bcfb118cdb30df4fb92eaf38b9
 DIST upkern-3.1.6.tar.bz2 18214 RMD160 a5d2156e7916e3db797d787f6c6573b37b614fd5 SHA1 75089ed4a4688aa5561c383c238ea39c519cb0fb SHA256 0bb802e5d1a9cd67445a6b5cc6c076179ee63464331415261eaa3a655fdee834
+DIST upkern-3.1.7.tar.bz2 18332 RMD160 0b599f3e62d9f33b2b0cdecaf2a6374b926aa7ce SHA1 88c9462c97821c4599b0e9787ed9e8b2975c864a SHA256 1f171e432194bcbd68d45717887fc0bed3814c79711691655bbec2478584fa9d
 EBUILD upkern-2.0.14.ebuild 588 RMD160 6e37da7e4673db24f9023af51d9d3161c6df87c0 SHA1 ae536faacc04e2899e1675fa0a71113ac83a0cea SHA256 16e89d066ab84fdd30e8d7a01ede8790686a4074bab2762cd2e3e278bcaf5d13
-EBUILD upkern-3.1.2.ebuild 734 RMD160 7ea7276a75bc8ad54055bb9eba262c3c6e17d672 SHA1 86b71cda3068922dc46eba6fdd2daf412f2784e7 SHA256 ee60e2bec35c0aacd86628984252af272e5d83f38763d3a13d9d895659e12be2
-EBUILD upkern-3.1.3.ebuild 823 RMD160 801c53e5ec006f7f56ae551e5bd15f350bb3dfe5 SHA1 1b7b4650682cc0c8236e08bbcba5d620da378070 SHA256 44ca1784cebab85c0e663103b93940ef874b3687ab6ba50185e2a070c3b12901
-EBUILD upkern-3.1.4.ebuild 823 RMD160 801c53e5ec006f7f56ae551e5bd15f350bb3dfe5 SHA1 1b7b4650682cc0c8236e08bbcba5d620da378070 SHA256 44ca1784cebab85c0e663103b93940ef874b3687ab6ba50185e2a070c3b12901
-EBUILD upkern-3.1.5.ebuild 823 RMD160 801c53e5ec006f7f56ae551e5bd15f350bb3dfe5 SHA1 1b7b4650682cc0c8236e08bbcba5d620da378070 SHA256 44ca1784cebab85c0e663103b93940ef874b3687ab6ba50185e2a070c3b12901
 EBUILD upkern-3.1.6.ebuild 823 RMD160 801c53e5ec006f7f56ae551e5bd15f350bb3dfe5 SHA1 1b7b4650682cc0c8236e08bbcba5d620da378070 SHA256 44ca1784cebab85c0e663103b93940ef874b3687ab6ba50185e2a070c3b12901
-MISC ChangeLog 1817 RMD160 24b7297c68bb3503069ee5aad1bce154acb05932 SHA1 02c7ec1e98cb4d0fae93a67a216ab42c545034ff SHA256 6aa1de4a4533a6d7e549f7c0a8477c16fbe92b480bfb6c142056bcb6c5b84604
+EBUILD upkern-3.1.7.ebuild 823 RMD160 801c53e5ec006f7f56ae551e5bd15f350bb3dfe5 SHA1 1b7b4650682cc0c8236e08bbcba5d620da378070 SHA256 44ca1784cebab85c0e663103b93940ef874b3687ab6ba50185e2a070c3b12901
+MISC ChangeLog 2020 RMD160 a4683f6c1da52fa89efb1f87f1b18357ce2d8ad4 SHA1 6b064b22fb21efcb10bb76dd218fd2b6e3fb086f SHA256 2b838f3b074bad414cb5009d3587a0144fc0db34dc018d69f58100b19e7c7998
 MISC metadata.xml 405 RMD160 a97224d51d49407236780494c188ecd441fd919c SHA1 3d9c627583480affd484ac0b1812c75078c2d27f SHA256 cd20665d6d4bcbf01de020e45ea7268c9f8149d179f64228ac18113de0b533f7
